# freesurfer

./: CMakeLists.txt  test.sh
AntsN4BiasFieldCorrectionFs/: test.sh
anatomicuts/: CMakeLists.txt
anatomicuts/Code/: AppendBundleFilter.txx  HierarchicalClusteringPruner.txx  TrkVTKPolyDataFilter.txx  VTKPolyDataToPolylineMeshFilter.txx  itkPolylineCell.h
cmake/: FindQT.cmake  functions.cmake
dissection_photo/retrospective_correction/: CMakeLists.txt
distribution/: FreeSurferColorLUT.txt  FreeSurferEnv.csh
dngtester/: CMakeLists.txt
exvivo/: CMakeLists.txt
freeview/: Annotation2D.cpp  Annotation2D.h  CMakeLists.txt  ColorTableItem.cpp  ColorTableItem.h  Contour2D.cpp  DialogGifMaker.cpp  DialogGifMaker.h  DialogLabelStatsInRange.cpp  DialogLabelStatsInRange.h  DialogLabelStatsInRange.ui  DialogLoadVolume.cpp  DialogPreferences.cpp  DialogPreferences.ui  DialogTransformVolume.cpp  DialogWayPointsAngle.cpp  DialogWayPointsAngle.h  DialogWayPointsAngle.ui  FSSurface.cpp  FSSurface.h  FSVolume.cpp  FSVolume.h  GenericRenderView.cpp  GenericRenderView.h  GifWriterWrapper.cpp  GifWriterWrapper.h  Interactor2DVolumeEdit.cpp  Interactor3D.cpp  LabelTreeWidget.cpp  Layer.cpp  Layer.h  LayerCollection.cpp  LayerCollection.h  LayerDTI.cpp  LayerEditRef.cpp  LayerMRI.cpp  LayerMRI.h  LayerODF.cpp  LayerPointSet.cpp  LayerPointSet.h  (+63 more)
gems/: CMakeLists.txt
gems/GUI/: CMakeLists.txt
include/: DICOMRead.h  MRISOBBTree.h  MRISdistancefield.h  cpputils.h  fmriutils.h  fsglm.h  fstagsio.h  hips.h  image.h  matrix.h  mideface.h  mri.h  mri2.h  mrisurf.h  tags.h  utilsmath.h  volcluster.h
infant/: CMakeLists.txt  CNYBCH.yaml  atlassubjects.csh  infant_recon_all  test.sh
infant/docker/: requirements.txt
infant/niftyreg/mac_arm64/: reg_aladin  reg_f3d  reg_resample
infant/niftyreg/ubuntu22_x86/: reg_aladin  reg_f3d  reg_resample
infant/niftyreg/ubuntu_x86/: reg_aladin  reg_f3d  reg_resample
lineprof/: CMakeLists.txt
mri_3d_photo_recon/: CMakeLists.txt  mri_3d_photo_recon
mri_3d_photo_recon/ext/unet3d/: model.py
mri_3d_photo_recon/photo_reconstruction/: image_utils.py  machine_learning_utils.py  mesh_utils.py  optimization.py  photo_aligner.py  utils.py
mri_3d_photo_recon/scripts/: recon_case.py
mri_WMHsynthseg/: CMakeLists.txt
mri_annotation2label/: mri_annotation2label.cpp
mri_ca_label/: test.sh
mri_claustrum_seg/: CMakeLists.txt  README.md  mri_claustrum_seg
mri_claustrum_seg/model/: claustrum-seg.py  claustrum_seg_20250616.h5
mri_concat/: mri_concat.cpp
mri_concatenate_gcam/: mri_concatenate_gcam.help.xml
mri_concatenate_lta/: mri_concatenate_lta.cpp
mri_convert/: CMakeLists.txt  mri_convert.cpp  mri_convert.help.xml
mri_coreg/: mri_coreg.cpp
mri_deface/: mri_defacer.cpp
mri_diff/: mri_diff.cpp
mri_dualperm/: CMakeLists.txt  mri_dualperm.cpp
mri_easyreg/: CMakeLists.txt  mri_easyatlas
mri_fdr/: mri_fdr.cpp
mri_fwhm/: mri_fwhm.cpp
mri_glmfit/: CMakeLists.txt  mri_glmfit.cpp  mri_mvglmfit.cpp
mri_gtmpvc/: mri_gtmpvc.cpp
mri_histo_util/: CMakeLists.txt  README.md  mri_histo_atlas_segment_fireants  mri_histo_atlas_segment_fullbayesian  mri_histo_atlas_segment_synthmorph
mri_histo_util/ERC_bayesian_segmentation/ERC_bayesian_segmentation/: SuperSynth_inference.py  relabeling.py
mri_histo_util/ERC_bayesian_segmentation/data_simplified/: combined_aseg_labels_new_targets.yaml  recipe_intensities_cheating_image_fireants.yaml
mri_histo_util/ERC_bayesian_segmentation/ext/: bias_field_correction_torch.py  my_functions.py
mri_histo_util/ERC_bayesian_segmentation/ext/unet3d/: buildingblocks.py
mri_histo_util/ERC_bayesian_segmentation/scripts/: segment.py  segment_fast.py  segment_fireants.py
mri_info/: mri_info.cpp
mri_label2label/: mri_label2label.cpp
mri_label_volume/: mri_label_volume.cpp
mri_normalize/: test.sh
mri_pglands_seg/: CMakeLists.txt  mri_pglands_seg
mri_pglands_seg/pglands_seg/: mni152_label_template.mgz  pglands.ctab  pglands_seg.pth
mri_probedicom/: CMakeLists.txt  mri_probedicom.cpp
mri_sclimbic_seg/: CMakeLists.txt
mri_segment_hypothalamic_subunits/: CMakeLists.txt
mri_segment_thalamic_nuclei_dti_cnn/: CMakeLists.txt
mri_segreg/: mri_segreg.cpp
mri_segstats/: mri_segstats.cpp
mri_super_synth/: CMakeLists.txt  README.md  mri_super_synth
mri_super_synth/SuperSynth/SuperSynth/: frugal_models.py  generators.py  utils.py
mri_super_synth/SuperSynth/ext/unet3d/: buildingblocks.py  model.py
mri_super_synth/SuperSynth/scripts/: inference.py
mri_surf2vol/: mri_surf2vol.cpp
mri_synthmorph/: Dockerfile.cpu  Dockerfile.gpu  fs-synthmorph-reg  test_register.sh
mri_synthseg/: CMakeLists.txt
mri_synthsr/: CMakeLists.txt  mri_synthsr  test.sh
mri_synthstrip/: Dockerfile.cpu  Dockerfile.gpu  mri_synthstrip  readme.md  synthstrip-docker  synthstrip-singularity  test.sh
mri_tumorsynth/: CMakeLists.txt  README.md  mri_tumorsynth
mri_vol2surf/: mri_vol2surf.cpp
mri_vol2vol/: mri_vol2vol.cpp
mri_volcluster/: CMakeLists.txt  mri_cluster.cpp  mri_volcluster.cpp
mri_volsynth/: mri_volsynth.cpp
mri_warp_convert/: mri_warp_convert.cpp  mri_warp_convert.help.xml
mri_watershed/: test.sh
mris2rgb/: CMakeLists.txt
mris_fwhm/: mris_fwhm.cpp
mris_mesh_subdivide/: CMakeLists.txt
mris_register_josa/: CMakeLists.txt
mris_volmask/: CMakeLists.txt  mris_volmask.cpp  test.sh
python/: CMakeLists.txt  req.sh  requirements-build-py38-cuda.txt  requirements-build-py38.txt  requirements-build-py39.txt  requirements-build.darwin_arm64.txt  requirements-build.darwin_x86_64.txt  requirements-build.txt  requirements-infant.txt  requirements-samseg.txt  requirements.txt
python/freesurfer/: freeview.py
python/fsbindings/: CMakeLists.txt
python/gems/: SamsegLongitudinal.py
qatools/: CMakeLists.txt
resurf/: CMakeLists.txt  mri_vessel_segment.cxx  mris_image2vtk.cxx  mris_multimodal.cxx
samseg/: CMakeLists.txt  samseg  samseg_cli_wrapper  sbtiv  test.sh
stim_polar/: CMakeLists.txt
vtkutils/: CMakeLists.txt  vtkInflatePolyData.cxx  vtkRGBATransferFunction.cxx  vtkRGBATransferFunction.h
(+105 files in other folders)
